# allio

./: .gitignore  ARCHITECTURE.md  AXIO_STATUS.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  REFACTOR.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  TAURI.md  TODO.md  TREE_DESIGN.md  _client.html  _index.html  bookmarklet.js  browser-client.html  debug.html  index.html  package-lock.json  package.json  requirements.txt  server.py  temp_jump.txt  tsconfig.json  vite.client.config.ts  vite.config.ts
.cargo/: config.toml
crates/allio/: Cargo.toml
crates/allio-ws/: Cargo.toml
crates/allio-ws/src/: lib.rs  rpc.rs  server.rs
crates/allio/src/: lib.rs  observation.rs  polling.rs
crates/allio/src/a11y/: mod.rs  notification.rs  role.rs  value.rs
crates/allio/src/core/: actions.rs  adapters.rs  mod.rs  queries.rs  subscriptions.rs  sync.rs
crates/allio/src/core/registry/: elements.rs  mod.rs  tree.rs
crates/allio/src/platform/: mod.rs  traits.rs
crates/allio/src/platform/macos/: display_link.rs  focus.rs  handles.rs  mapping.rs  notifications.rs  window.rs
crates/allio/src/types/: element.rs  error.rs  event.rs  geometry.rs  ids.rs  mod.rs  recency.rs  window.rs
crates/axio/: Cargo.toml  IMPROVEMENTS.md  build.rs
crates/axio-ws/: Cargo.toml
crates/axio-ws/src/: lib.rs  protocol.rs  rpc.rs  server.rs  websocket.rs
crates/axio/src/: api.rs  config.rs  core.rs  element_registry.rs  events.rs  lib.rs  polling.rs  registry.rs  review-3.md  rpc.rs  types.rs  ui_element.rs  window_manager.rs  window_registry.rs  windows.rs
crates/axio/src/a11y/: role.rs  value.rs
crates/axio/src/accessibility/: action.rs  mod.rs  notification.rs  role.rs  value.rs
crates/axio/src/api/: elements.rs  mod.rs  screen.rs  windows.rs
crates/axio/src/core/: actions.rs  adapters.rs  builders.rs  element_ops.rs  handlers.rs  internal.rs  mod.rs  mutations.rs  queries.rs  state.rs  subscriptions.rs  sync.rs  tree.rs
crates/axio/src/core/registry/: elements.rs  mod.rs  processes.rs  tree.rs  windows.rs
crates/axio/src/platform/: display.rs  display_link.rs  element_ops.rs  handles.rs  macos.rs  macos_cf.rs  macos_windows.rs  mod.rs  mouse.rs  traits.rs
crates/axio/src/platform/macos/: cf_utils.rs  display.rs  display_link.rs  element.rs  focus.rs  handles.rs  mapping.rs  mod.rs  notifications.rs  observer.rs  skylight.rs  util.rs  window.rs  window_events.rs  window_list.rs
crates/axio/src/platform/macos_platform/: mod.rs
crates/axio/src/types/: element.rs  error.rs  event.rs  freshness.rs  ids.rs  mod.rs  window.rs
crates/axio/src/ws/: mod.rs  rpc.rs  server.rs
crates/x-win-rs/: Cargo.toml  README.md  rustfmt.toml
crates/x-win-rs/src/: lib.rs
crates/x-win-rs/src/common/: api.rs
crates/x-win-rs/src/common/x_win_struct/: mod.rs  window_info.rs
crates/x-win-rs/src/linux/: api.rs  mod.rs
crates/x-win-rs/src/macos/: api.rs
crates/x-win-rs/src/win32/: api.rs
docs/: ARCHITECTURE.md  CLEANUP_PLAN.md  CLEANUP_PROPOSAL.md  FUTURE.md  FUTURE_FEATURES.md  MACOS_API_IMPROVEMENTS.md  MACOS_API_RESEARCH.md  NOTES.md  OBSERVATION_DESIGN.md  OBSERVATION_IDEAS.md  OBSERVATION_IMPLEMENTATION.md  QUERY.md  REGISTRY_REFACTOR.md  REVIEW_NOTES.md  TREE_REFACTOR.md  refactor-proposals.md  registry-refactor.md
notes/: AUDIT-platform-abstraction.md  TODO.md
scripts/: check-leaks.sh  watch-memory.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  app.entitlements  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: accessibility.rs  api.rs  ax_value.rs  axio.rs  element_registry.rs  main.rs  mouse.rs  node_watcher.rs  protocol.rs  ui_element.rs  websocket.rs  window_manager.rs  windows.rs
src-tauri/src/platform/: ax_private.rs  macos.rs  mod.rs
src-tauri/src/x-win-rs/src/macos/: api.rs  permission.rs
src-web/: main.ts  sand.html
src-web/client/: demo.html  interlay.ts
src-web/overlays/: 3d.html  axtrees.html  debug.html  graph.html  identifiers.html  outlines.html  pet.html  ports.html  query.html  sand.html  url-input.html  windows-debug.html
src-web/sand/: folk-sand.glsl.ts  folk-sand.ts
src-web/src/: astar.ts  axio.ts  axtrees.ts  debug.ts  gizmos.ts  graph.ts  identifiers.ts  interlay-client.ts  outlines.ts  pet.ts  ports.ts  protocol.ts  query.ts  sand.glsl.ts  sand.ts  windows-debug.ts
