[package]
name = "axio-app"
version = "0.0.1"
description = "AXIO Tauri Application"
authors = ["Orion Reed"]
edition = "2021"
license = "MIT"
repository = "https://github.com/folkjs/axio"
readme = "../README.md"
keywords = ["accessibility", "tauri", "desktop"]
categories = ["gui"]
publish = false


[[bin]]
name = "axio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axio = { path = "../crates/axio" }
axio-ws = { path = "../crates/axio-ws" }

# Tauri framework
tauri = { version = "2", features = [
  "tray-icon",
  "macos-private-api",
  "devtools",
  "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["full"] }
serde_json = "1"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
