[package]
name = "allio-app"
version = "0.0.1"
description = "Allio Tauri Application"
authors = ["Orion Reed"]
edition = "2021"
license = "MIT"
repository = "https://github.com/folk-js/allio"
readme = "../README.md"
keywords = ["accessibility", "tauri", "desktop"]
categories = ["gui"]
publish = false


[[bin]]
name = "allio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
allio = { path = "../crates/allio" }
allio-ws = { path = "../crates/allio-ws" }

# Tauri framework
tauri = { version = "2", features = [
  "tray-icon",
  "macos-private-api",
  "devtools",
  "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["full"] }
serde_json = "1"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
