[package]
name = "axio-ws"
version = "0.1.0"
edition = "2021"
description = "Thin WebSocket server for AXIO accessibility system"
authors = ["Orion Reed"]
license = "MIT"

[dependencies]
# Core AXIO crate
axio = { path = "../axio" }

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization (for JSON-RPC messages)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript type generation
ts-rs = "10"
