[package]
name = "axio-ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for AXIO accessibility layer"
authors = ["Orion Reed"]
license = "MIT"
repository = "https://github.com/folkjs/axio"
readme = "../../README.md"
keywords = ["accessibility", "websocket", "rpc"]
categories = ["accessibility", "network-programming"]

[lints]
workspace = true

[dependencies]
axio = { path = "../axio" }
axum = { version = "0.7", features = ["ws"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
ts-rs = "10"
