[package]
name = "axio-core"
version = "0.1.0"
edition = "2021"
description = "Core accessibility types and operations for AXIO"
authors = ["Orion Reed"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
