[package]
name = "axio"
version = "0.1.0"
edition = "2021"
description = "Accessibility I/O - window tracking and accessibility API"
authors = ["Orion Reed"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
x-win = "5.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
