[package]
name = "axio"
version = "0.1.0"
edition = "2021"
description = "Accessibility I/O - window tracking and accessibility API"
authors = ["Orion Reed"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
branded = { version = "0.1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"
ts-rs = "10"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication"] }
objc2-application-services = { version = "0.3.2", features = [
  "AXUIElement",
  "AXError",
  "AXValue",
  "AXAttributeConstants",
  "AXNotificationConstants",
  "AXTextAttributedString",
  "libc",
] }
