[package]
edition = "2021"
name = "x-win"
version = "0.0.0"
authors = ["BENKHADRA Hocine <miniben90@hotmail.com>"]
keywords = ["window", "active", "current", "position", "open"]
description = "This package allows you to retrieve precise information about active and open windows on Windows, MacOS, and Linux. You can obtain the position, size, title, and other memory of windows."
repository = "https://github.com/miniben-90/x-win/tree/main/x-win-rs"
license = "MIT"
rust-version = "1.60.0"

[lib]
name = "x_win"
path = "src/lib.rs"

[features]
default = []
macos_permission = []

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3" }
objc2-core-foundation = { version = "0.3.2" }
objc2-core-graphics = { version = "0.3.2" }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication"] }

[profile.release]
lto = true
panic = "abort"
